XRENDERING-736: Macros info, success, warning and error are only distinguished by colors (#286)
* Added the appropriate changes to the block structure of the message macro
* Added a container for the box title
* Added an interface and a component to handle icon providing.
* Use the interface to add icons to the info, success, warning and error macros